Migration done from 7 to 17